@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-27T08:16:22Z",
-  "count_outdated" : 358,
-  "uniques_outdated" : 193,
-  "count" : 383,
+  "timestamp" : "2022-06-27T16:16:38Z",
+  "count_outdated" : 360,
+  "uniques_outdated" : 194,
+  "count" : 384,
   "uniques" : 209,
   "clones" : [
-    {
-      "timestamp": "2022-06-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-14T00:00:00Z",
       "count": 5,
